More 1.2.1 work: refactor menu builder, refactor brower window, fix CSS alignments.

--- a/app/assets/css/style.css
+++ b/app/assets/css/style.css
@@ -9,6 +9,7 @@ body {
 	cursor: default;
 	font-family: 'Quicksand', sans-serif;
 	color: #fff;
+	overflow: hidden;
 }
 video {
 	position: fixed;
